<resources>
    <string name="drop_down_list_header_default_text">Click to refresh…</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh…</string>
    <string name="drop_down_list_header_release_text">Release to refresh…</string>
    <string name="drop_down_list_header_loading_text">Loading…</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading…</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="image_content">Image</string>
    <string name="app_name">模仿口袋工具</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="com.crashlytics.android.build_id">0fdec7e2-b10b-4933-be02-a6e244289713</string>
    <string name="history">历史</string>
    <string name="daily_tool">日常工具</string>
    <string name="Life_query">生活服务</string>
    <string name="phone_housekeeper">阅读发现</string>
    <string name="pocket_market">口袋商城</string>
    <string name="button_search">搜索</string>
    <string name="search_baidu">百度</string>
    <string name="search_picture">图片</string>
    <string name="search_map">地图</string>
    <string name="search_novel">小说</string>
    <string name="search_google">谷歌</string>
    <string name="search_jd">京东</string>
    <string name="search_taobao">淘宝</string>
    <string name="tool_flash">手电筒</string>
    <string name="tool_calendar">万年历</string>
    <string name="tool_weather">天气</string>
    <string name="tool_pm2.5">PM2.5</string>
    <string name="tool_mirror">镜子</string>
    <string name="data_refresh">刷新</string>
    <string name="tool_qr">扫码比价</string>
    <string name="tool_secretphoto">私密相册</string>
    <string name="tool_dictionary">中英词典</string>
    <string name="tool_countdown">纪念日</string>
    <string name="tool_dream">周公解梦</string>
    <string name="tool_currency">汇率转换</string>
    <string name="tool_daysmatter">倒数日</string>
    <string name="tool_calculator">科学计算器</string>
    <string name="tool_fiction">小说阅读</string>
    <string name="tool_conversion">单位转换</string>
    <string name="tool_constelltion">星座运势</string>
    <string name="tool_password">密码备忘录</string>
    <string name="tool_ruler">尺子</string>
    <string name="tool_battery">电池管家</string>
    <string name="tool_wallpaper">手机壁纸</string>
    <string name="tool_memorymanager">内存管家</string>
    <string name="tool_notepad">记事本</string>
    <string name="tool_sizetable">尺码对照表</string>
    <string name="tool_account">记账本</string>
    <string name="tool_jrtt">今日头条</string>
    <string name="tool_qqmisic">QQ音乐</string>
    <string name="tool_breadtrip">面包旅行</string>
    <string name="tool_duokanreawd">多看书城</string>
    <string name="tool_duitang">堆糖</string>
    <string name="tool_comic">漫画</string>
    <string name="tool_read">每日精选</string>
    <string name="tool_dailyquote">每日一句</string>
    <string name="search_metro">地铁查询</string>
    <string name="search_flightinfo">航班查询</string>
    <string name="search_gas">附近油价</string>
    <string name="search_waimai">外卖</string>
    <string name="search_id">身份证查询</string>
    <string name="search_lotto">彩票查询</string>
    <string name="search_movie">电影查询</string>
    <string name="search_package">快递查询</string>
    <string name="search_phone">手机归属地</string>
    <string name="search_phonesearch">常用电话</string>
    <string name="search_stores">商家查询</string>
    <string name="search_train">火车查询</string>
    <string name="search_recipe">菜谱大全</string>
    <string name="search_ticket">抢火车票</string>
    <string name="search_violation">违章查询</string>
    <string name="search_doctor">好大夫</string>
    <string name="search_zmqnw">周末去哪玩</string>
    <string name="search_delivery">外卖</string>
    <string name="search_group">团购</string>
    <string name="search_juhuasuan">聚划算</string>
    <string name="search_maoymovie">猫眼电影</string>
    <string name="search_womancloth">潮流女装</string>
    <string name="search_mancloth">精品男装</string>
    <string name="search_dayte">天天特价</string>
    <string name="search_meituan">美团</string>
    <string name="search_aitao">爱淘宝</string>
    <string name="search_crip">机票酒店</string>
    <string name="search_bigsale">每日爆款</string>
    <string name="search_weblottery">彩票</string>
    <string name="search_maoyan">猫眼电影</string>
    <string name="search_weipiao">微信电影票</string>
    <string name="search_onehaodian">1号店</string>
    <string name="search_phonecharge">手机充值</string>
    <string name="search_58city">58同城</string>
    <string name="search_kuaiditaxi">快的打车</string>
    <string name="search_diditaxi">滴滴打车</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="question">您需要保存这个文件？</string>
    <string name="result">文件保存在:</string>
    <string name="close">关闭</string>
    <string name="stopping">stopping</string>
    <string name="noconnection">网络未连接...</string>
    <string name="check_network_connect">请检查你的网路连接，确保你的网络正常...</string>
    <string name="error">错误</string>
    <string name="nosd">没有SD卡或者SD卡没插好！</string>
    <string name="updatetimestr">更新</string>
    <string name="air_state_1">空气良好</string>
    <string name="air_state_2">轻度污染</string>
    <string name="air_state_3">中度污染</string>
    <string name="air_state_4">重度污染</string>
    <string name="air_state_5">严重毒害</string>
    <string name="title_activity_schedule_add">ScheduleAddActivity</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="remeber_note">记点事儿</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="input_search_baidu">百度搜索</string>
    <string name="input_search_picture">百度图片搜索</string>
    <string name="input_search_map">百度地图搜索</string>
    <string name="input_search_novel">小说搜索</string>
    <string name="input_search_google">google搜索</string>
    <string name="input_search_jd">京东搜索</string>
    <string name="input_search_taobao">淘宝搜索</string>
    <string name="exit_app">再按一次退出口袋工具</string>
    <string name="no_have_front_camera">很遺憾，您的手机没有前置摄像头，无法启动镜子....</string>
    <string name="camera_error_head">相机异常</string>
    <string name="camera_error_content">无法启动摄像头，请您确认摄像头是否正常工作!</string>
    <string name="camera_error_sure">确定</string>
    <string name="txt_correct_camera_orien">校正摄像头</string>
    <string name="title_correct_preview_orien">摄像头方向校正</string>
    <string name="content_correct_preview_orien">当您的摄像头取景方向或照片保存方向不正确时，建议进行校正。</string>
    <string name="correct_preview_start_btn">开始校正</string>
    <string name="title_correct_pic_orien">照片保存方向校正</string>
    <string name="content_correct_pic_orien">请选择方向正确的照片</string>
    <string name="btn_sure_pic_orien">确认</string>
    <string name="content1_correct_preview_orien">请保持手机为竖屏状态！</string>
    <string name="content2_correct_preview_orien">当前摄像取景方向是否正确？</string>
    <string name="btn_yes_correct_orien">正确</string>
    <string name="btn_no_correct_orien">不正确</string>
    <string name="goods_company">企业:</string>
    <string name="goods_brand">品牌:</string>
    <string name="goods_specification">规格:</string>
    <string name="goods_price">价格:</string>
    <string name="goods_qrcode">商品码:</string>
    <string name="qrcode_info_from">数据由条码中心提供</string>
    <string name="qrcode_info_com">upccenter.com</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lock_tip_pattern_ready">绘制解锁图案:</string>
    <string name="lock_tip_pattern_start">完成后松开手指:</string>
    <string name="lock_tip_pattern_error_tooless">至少连接4个点，请重试:</string>
    <string name="lock_tip_pattern_recored">图案已记录</string>
    <string name="lock_tip_pattern_check">再次绘制图案进行确认:</string>
    <string name="lock_tip_pattern_error_checkerror">输入错误，请重试</string>
    <string name="lock_tip_pattern_done">您的新解锁图案:</string>
    <string name="verify_tip_input">输入手势密码:</string>
    <string name="verify_tip_error">密码错了，还可以输入%1$d次</string>
    <string name="lock_btn_next">继续</string>
    <string name="lock_btn_done">完成</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_retry">重试</string>
    <string name="is_searching">正在查找中…</string>
    <string name="qrcode_title">二维码/条形码扫描</string>
    <string name="webview_exit">完成</string>
    <string name="webview_refresh">刷新</string>
    <string name="webview_history">历史</string>
    <string name="webview_is_opening">正在打开</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="del">DEL</string>
    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="title_activity_novel_main">NovelMainActivity</string>
    <string name="novel_activity_no_open">对不起，未能打开小说网站…</string>
    <string name="title_activity_package_main">PackageMainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="calendar_bar_title">万年历</string>
    <string name="calendar_bar_option">选项</string>
    <string name="package_company_ems">EMS</string>
    <string name="package_company_sf">顺丰</string>
    <string name="package_company_st">申通</string>
    <string name="package_company_yt">圆通</string>
    <string name="package_company_yd">韵达</string>
    <string name="package_company_tt">天天</string>
    <string name="package_company_zt">中通</string>
    <string name="package_company_ht">汇通</string>
    <string name="package_search">查询</string>
    <string name="package_recently_search">最近查询</string>
    <string name="package_title">快递查询</string>
    <string name="package_txt_number">单号:</string>
    <string name="package_txt_pre_search">上次查询:</string>
    <string name="package_search_failed_reason">您的快递单号不正确或者快递公司选择不正确！</string>
    <string name="package_edittext_hint">输入运单号</string>
    <string name="constelltion_composite_index">综合指数:</string>
    <string name="constelltion_composite_index_no_point">综合指数</string>
    <string name="constelltion_match_index">速配指数:</string>
    <string name="constelltion_luky_number">幸运数字:</string>
    <string name="constelltion_luky_color">幸运颜色:</string>
    <string name="constelltion_health">健康</string>
    <string name="violation_condition_city">交管局</string>
    <string name="violation_condition_car_type">车辆类型</string>
    <string name="violation_condition_car_number">车牌号码</string>
    <string name="violation_condition_car_engine">发动机号</string>
    <string name="violation_condition_car_frame_num">车架号</string>
    <string name="violation_condition_car_regist">注册号</string>
    <string name="violation_select_city">选择城市</string>
    <string name="violation_select_cartype">选择类型</string>
    <string name="train_begin">始发地</string>
    <string name="train_end">目的地</string>
    <string name="train_type">车类型</string>
    <string name="train_all">全部</string>
</resources>