<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sunday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/monday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tuesday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wednesday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/thursday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/friday" android:layout_weight="1.0" style="@style/text_14_white" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/saturday" android:layout_weight="1.0" style="@style/text_14_white" />
    </LinearLayout>
    <GridView android:id="@id/calendar_gridiview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:numColumns="7" />
</FrameLayout>