<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/color_gradient_bg" android:scaleType="centerCrop" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="50.0dip">
            <Button android:layout_gravity="left|center" android:id="@id/secret_cancel" android:background="@color/transparent" android:layout_width="60.0dip" android:layout_height="45.0dip" android:text="@string/cancel" style="@style/text_16_white" />
        </FrameLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
                <TextView android:textSize="21.0sp" android:textColor="@color/white" android:layout_gravity="top|center" android:id="@id/secret_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="输入密码" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_marginBottom="10.0dip">
                    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <Button android:textSize="30.0sp" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/secret_1" android:background="@drawable/password_tag_res" android:layout_width="50.0dip" android:layout_height="50.0dip" />
                        <Button android:textSize="30.0sp" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/secret_2" android:background="@drawable/password_tag_res" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="" />
                        <Button android:textSize="30.0sp" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/secret_3" android:background="@drawable/password_tag_res" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" />
                        <Button android:textSize="30.0sp" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/secret_4" android:background="@drawable/password_tag_res" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/board_container" android:layout_width="fill_parent" android:layout_height="280.0dip">
            <LinearLayout android:orientation="horizontal" android:id="@id/calulator_keyboard_second" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/seven" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/seven" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/eight" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/eight" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/nine" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/nine" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/calulator_keyboard_third" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/four" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/four" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/five" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/five" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/six" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/six" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/calulator_keyboard_fourth" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/one" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/one" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/two" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/two" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/three" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/three" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/calulator_keyboard_five" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/zero" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/zero" android:layout_weight="1.0" />
                <Button android:textSize="30.0sp" android:textColor="@color/white" android:background="@drawable/btn_calculator_number_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>