<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="200.0dip" android:layout_height="30.0dip">
            <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_city" style="@style/text_14_white" />
            <Button android:gravity="center" android:id="@id/violation_car_city" android:background="@drawable/btn_train_type_res" android:layout_width="75.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:text="@string/violation_select_city" style="@style/text_14_white" />
            <ProgressBar android:layout_gravity="center_vertical" android:id="@id/violation_city_waitbar" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="30.0dip">
            <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_car_type" style="@style/text_14_white" />
            <Button android:gravity="center" android:id="@id/violation_car_type" android:background="@drawable/btn_train_type_res" android:layout_width="75.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:text="@string/violation_select_cartype" style="@style/text_14_white" />
            <ProgressBar android:layout_gravity="center_vertical" android:id="@id/violation_cartype_waitbar" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="30.0dip">
            <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_car_number" style="@style/text_14_white" />
            <EditText android:textSize="15.0sp" android:textColor="@color/white" android:textColorHint="#ffc8c8c8" android:layout_gravity="center_vertical" android:id="@id/violation_car_num" android:background="@color/transparent_20" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="150.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:ems="10" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/violation_car_engine_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30.0dip">
            <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_car_engine" style="@style/text_14_white" />
            <EditText android:textSize="15.0sp" android:textColor="@color/white" android:textColorHint="#ffc8c8c8" android:layout_gravity="center_vertical" android:id="@id/violation_car_engine" android:background="@color/transparent_20" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="150.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:ems="10" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/violation_car_frame_num_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30.0dip">
            <TextView android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_car_frame_num" style="@style/text_14_white" />
            <EditText android:textSize="15.0sp" android:textColor="@color/white" android:textColorHint="#ffc8c8c8" android:layout_gravity="center_vertical" android:id="@id/violation_car_frame_num" android:background="@color/transparent_20" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="150.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:ems="10" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/violation_car_regist_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30.0dip">
            <TextView android:gravity="end" android:layout_gravity="center_vertical" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/violation_condition_car_regist" style="@style/text_14_white" />
            <EditText android:textSize="15.0sp" android:textColorHint="#ffc8c8c8" android:layout_gravity="center_vertical" android:id="@id/violation_car_regist" android:background="@color/transparent_20" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="150.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:ems="10" android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>