<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="80.0dip">
        <EditText android:textSize="24.0sp" android:textColor="@color/white" android:textColorHint="@color/default_texthint_color" android:gravity="center" android:id="@id/train_edit_start" android:background="@color/transparent_20" android:paddingLeft="30.0dip" android:paddingTop="10.0dip" android:paddingRight="30.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/train_begin" android:layout_weight="1.0" android:inputType="text" android:imeOptions="normal|actionUnspecified" android:textCursorDrawable="@null" />
        <ImageView android:background="@color/transparent" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <EditText android:textSize="24.0sp" android:textColor="@color/white" android:textColorHint="@color/default_texthint_color" android:gravity="center" android:id="@id/train_edit_end" android:background="@color/transparent_20" android:paddingLeft="30.0dip" android:paddingTop="10.0dip" android:paddingRight="30.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/train_end" android:layout_weight="1.0" android:inputType="text" android:imeOptions="normal|actionUnspecified" android:textCursorDrawable="@null" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="65.0dip" android:layout_marginTop="80.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/train_type" />
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@id/train_btn_select_type" android:background="@drawable/btn_train_type_res" android:layout_width="100.0dip" android:layout_height="44.0dip" android:layout_marginLeft="65.0dip" android:text="@string/train_all" />
        <Button android:textSize="16.0sp" android:textColor="@color/color_btn_blue_txt" android:layout_gravity="right|center" android:id="@id/train_btn_search" android:background="@drawable/btn_package_search_res" android:layout_width="67.0dip" android:layout_height="45.0dip" android:layout_marginRight="10.0dip" android:text="@string/package_search" />
    </FrameLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="145.0dip" android:src="@drawable/gr_nav_line" />
    <ListView android:scrollbarThumbVertical="@drawable/custom_scroll_style" android:layout_gravity="left" android:id="@id/train_list" android:clipChildren="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="146.0dip" android:listSelector="@drawable/color_list_select" android:cacheColorHint="#00000000" android:divider="@color/listview_divider_color" android:dividerHeight="1.0px" android:headerDividersEnabled="true" android:footerDividersEnabled="true" android:isScrollContainer="false" />
</FrameLayout>